--- a/Web Store Project/Search.html
+++ b/Web Store Project/Search.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tìm Kiếm</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
      <img src="Image/logostore-Photoroom.png" class="Logo">
