--- a/Web Store Project/User.html
+++ b/Web Store Project/User.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Web Store</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
@@ -25,6 +25,6 @@
         </ul>
     </div>
   <!-- JS -->
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
