--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styleLogin.css">
 </head>
 <body>
     <div class="box">
@@ -11,8 +11,9 @@
         <button onclick="login()" class="login">Đăng nhập</button>
         <button onclick="register()" class="login">Đăng ký</button>
         <p id="error" style="color:red; font-size:20px; display:none;">Sai email hoặc mật khẩu!</p>
+        <p><a href= "Admin/Login.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
     </div>
     <img src="Image/logostore-Photoroom.png" class="Logo">
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
