--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="css/styleLogin.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="box">
-        <input type="text" id="email" placeholder="Nhập email" required>
-        <input type="password" id="password" placeholder="Nhập mật khẩu" required>
+        <input type="text" id="email" placeholder="Email..." style="font-size:15px" required>
+        <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
         <button onclick="login()" class="login">Đăng nhập</button>
         <button onclick="register()" class="login">Đăng ký</button>
-        <p id="error" style="color:red; font-size:20px; display:none;">Sai email hoặc mật khẩu!</p>
-        <p><a href= "Admin/Login.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
+        <p id="error" style="color:red; font-size:16px; display:none;">Sai email hoặc mật khẩu!</p>
+        <p><a href= "Admin/LoginA.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
     </div>
     <img src="Image/logostore-Photoroom.png" class="Logo">
     <script src="js/script.js"></script>
