--- a/Web Store Project/Admin/Admin.html
+++ b/Web Store Project/Admin/Admin.html
@@ -2,13 +2,26 @@
 <html>
 <head>
     <title>Admin</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styleAdmin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
-    <div>
-        <img src= "../Image/logostore-Photoroom.png" class="Logo"/>
+     <!-- Header -->
+  <div class="header">
+    <div class="logo">
+      <img src="../Image/logostore-Photoroom.png" alt="Logo" />
     </div>
-<script src="../js/script.js"></script>
+
+    <div class="header-right">
+      <a href="Khachhang.html"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
+    </div>
+  </div>
+
+  <!-- Nội dung -->
+  <div class="content">
+    <h1>Trang Admin</h1>
+    <p>Chọn mục trong header để quản lý</p>
+  </div>
+<script src="../js/jsAdmin.js"></script>
 </body>   
 </html>
