--- a/Web Store Project/Admin/LoginA.html
+++ b/Web Store Project/Admin/LoginA.html
@@ -18,6 +18,6 @@
   </form>
   <p id="errorMsg" style="color:red; display:none;">Sai email hoặc mật khẩu!</p>
 
-  <script src="../js/javascriptA.js"></script>
+  <script src="../js/scriptLogin.js"></script>
 </body>
 </html>
