--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleLi.css">
 </head>
 <body>
     <div class="box">
