--- a/Web Store Project/Main.html
+++ b/Web Store Project/Main.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Web Store</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleMain.css">
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
- 
-  <div>
-        <img src= "Image/logostore-Photoroom.png" class="Logo"/>
+   <!-- Header -->
+  <div class="header">
+    <div class="logo">
+      <img src="Image/logostore-Photoroom.png" alt="Logo">
     </div>
-     <div class="others">
-        <ul>
-            <input id="searchBox" placeholder="Tìm Kiếm" type="text">
-            <i class="fa fa-search"></i>
-        </ul>
-        <ul>
-            <a class="fa fa-user" href="#"></a>
-        </ul>
-        <ul>
-            <a class="fa fa-shopping-bag" href="#"></a>
-        </ul>
-        <ul>
-            <a href="Login.html">
-            <button >Đăng Nhập </button>
-            </a>
-        </ul>
+    <div class="others">
+      <ul>
+          <input style="height: 30px;font-size: 15px;" id="searchBox" placeholder="Tìm Kiếm..." type="text">
+          <i class="fa fa-search"></i>
+      </ul>
+      <ul>
+          <a class="fa fa-user" href="User/ThongTin.html"></a>
+      </ul>
+      <ul>
+          <a class="fa fa-shopping-bag" href="#"></a>
+      </ul>
+      <ul>
+          <a href="Login.html">
+            <button>Đăng Nhập</button>
+          </a>
+      </ul>
     </div>
-  <!-- JS -->
-  <script src="js/script.js"></script>
+  </div>
+  <script>
+  document.getElementById("searchBox").addEventListener("keypress", function(event) {
+    if (event.key === "Enter") {
+        event.preventDefault();
+        window.location.href = "User/Search.html";
+    }
+});
+</script>
 </body>
 </html>
