Hoan thanh cac muc cua DangHau

--- a/Web Store Project/Admin/Admin.html
+++ b/Web Store Project/Admin/Admin.html
@@ -14,6 +14,7 @@
 
     <div class="header-right">
       <a href="Khachhang.html"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
+      <a href="SanPham.html"><i class="#"></i> Quản lý loại sản phẩm</a>
     </div>
   </div>
 
