--- a/Web Store Project/Main.html
+++ b/Web Store Project/Main.html
@@ -18,7 +18,7 @@
           <i class="fa fa-search"></i>
       </ul>
       <ul>
-          <a class="fa fa-user" href="User/ThongTin.html"></a>
+          <a class="fa fa-user" href="Login.html"></a>
       </ul>
       <ul>
           <a class="fa fa-shopping-bag" href="#"></a>
@@ -31,7 +31,7 @@
     </div>
   </div>
   <script>
-  document.getElementById("searchBox").addEventListener("keypress", function(event) {
+    document.getElementById("searchBox").addEventListener("keypress", function(event) {
     if (event.key === "Enter") {
         event.preventDefault();
         window.location.href = "User/Search.html";
