--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -9,7 +9,7 @@
         <input type="text" id="email" placeholder="Email..." style="font-size:15px" required>
         <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
         <button onclick="login()" class="login">Đăng nhập</button>
-        <button onclick="register()" class="login">Đăng ký</button>
+        <button onclick="window.location.href='Register.html'" class="login">Đăng ký</button>
         <p id="error" style="color:red; font-size:16px; display:none;">Sai email hoặc mật khẩu!</p>
         <p><a href= "Admin/LoginA.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
     </div>
