--- a/Web Store Project/User/User.html
+++ b/Web Store Project/User/User.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Web Store</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/styleUser.css">
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
- 
-  <div>
-        <img src= "../Image/logostore-Photoroom.png" class="Logo"/>
+   <!-- Header -->
+  <div class="header">
+    <div class="logo">
+      <img src="../Image/logostore-Photoroom.png" alt="Logo">
     </div>
-     <div class="others">
-        <ul>
-            <input id="searchBox" placeholder="Tìm Kiếm" type="text">
-            <i class="fa fa-search"></i>
-        </ul>
-        <ul>
-            <a class="fa fa-user" href="ThongTin.html"></a>
-        </ul>
-        <ul>
-            <a class="fa fa-shopping-bag" href="#"></a>
-        </ul>
+    <div class="others">
+      <ul>
+          <input style="height: 30px;font-size: 15px;" id="searchBox" placeholder="Tìm Kiếm..." type="text">
+          <i class="fa fa-search"></i>
+      </ul>
+      <ul>
+          <a class="fa fa-user" href="ThongTin.html"></a>
+      </ul>
+      <ul>
+          <a class="fa fa-shopping-bag" href="#"></a>
+      </ul>
     </div>
-  <script src="../js/script.js"></script>
+  </div>
+  <script src="../js/script.js">
+</script>
 </body>
 </html>
