--- a/Web Store Project/Admin/Admin.html
+++ b/Web Store Project/Admin/Admin.html
@@ -11,7 +11,7 @@
     <div class="logo">
       <img src="../Image/logostore-Photoroom.png" alt="Logo" />
     </div>
-
+<!--Các chức năng-->
     <div class="header-right">
       <a href="Khachhang.html"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
       <a href="SanPham.html"><i class="#"></i> Quản lý loại sản phẩm</a>
