--- a/Web Store Project/Main.html
+++ b/Web Store Project/Main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Web Store</title>
+  <title>Trang chủ</title>
   <link rel="stylesheet" href="css/styleMain.css">
   <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
@@ -30,6 +30,7 @@
       </ul>
     </div>
   </div>
+  <!--Click enter sau khi nhập để search-->
   <script>
     document.getElementById("searchBox").addEventListener("keypress", function(event) {
     if (event.key === "Enter") {
