--- a/Web Store Project/User/DoiTT.html
+++ b/Web Store Project/User/DoiTT.html
@@ -19,6 +19,7 @@
             <input type="text" placeholder="Username...">
             <input type="text" placeholder="Họ và tên...">
             <input type="text" placeholder="Số điện thoại...">
+            <input type="text" placeholder="Địa chỉ...">
             <input type="text" placeholder="Email...">
             <input type="password" placeholder="Password...">
 
