--- a/Web Store Project/User/ThongTin.html
+++ b/Web Store Project/User/ThongTin.html
@@ -11,6 +11,7 @@
             <img src="../Image/logostore-Photoroom.png" alt="Logo">
         </div>
         <div class="header-right">
+            <!--Các chức năng-->
             <a href="User.html">Trang User</a>
             <a href="DoiTT.html">Đổi thông tin</a>
             <button onclick="logout()">Đăng xuất</button>
