--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Đăng Nhập</title>
+    <title>Đăng Nhập Người Dùng</title>
     <link rel="stylesheet" href="css/styleLi.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
         <button onclick="login()" class="login">Đăng nhập</button>
         <button onclick="window.location.href='Register.html'" class="login">Đăng ký</button>
         <p id="error" style="color:red; font-size:16px; display:none;">Sai email hoặc mật khẩu!</p>
+        <!--Đăng nhập quản trị viên riêng-->
         <p><a href= "Admin/LoginA.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
     </div>
     <img src="Image/logostore-Photoroom.png" class="Logo">
