--- a/Web Store Project/Register.html
+++ b/Web Store Project/Register.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="css/styleLi.css">
 </head>
 <body>
+    <!--Nhập thông tin đang kí-->
     <div class="box">
         <input type="text" id="username" placeholder="Username..." style="font-size:15px" required>
         <input type="text" id="name" placeholder="Họ và Tên..." style="font-size:15px" required>
         <input type="text" id="phone" placeholder="Số điện thoại..." style="font-size:15px" required>
+        <input type="text" id="address" placeholder="Địa chỉ..." style="font-size:15px" required>
         <input type="text" id="email" placeholder="Email..." style="font-size:15px" required>
         <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
         <button onclick="register()" class="login">Đăng ký</button>
