--- a/Web Store Project/Admin/Admin.html
+++ b/Web Store Project/Admin/Admin.html
@@ -14,14 +14,14 @@
 <!--Các chức năng-->
     <div class="header-right">
       <a href="Khachhang.html"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
-      <a href="SanPham.html"><i class="#"></i> Quản lý loại sản phẩm</a>
+      <a href="SanPham.html"><i class="fa-solid fa-list-check"></i> Quản lý loại sản phẩm</a>
     </div>
   </div>
 
   <!-- Nội dung -->
   <div class="content">
     <h1>Trang Admin</h1>
-    <p>Chọn mục trong header để quản lý</p>
+    <p>các chức năng quản lý</p>
   </div>
 <script src="../js/jsAdmin.js"></script>
 </body>   
