--- a/Web Store Project/Admin/Khachhang.html
+++ b/Web Store Project/Admin/Khachhang.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
+  <meta charset="UTF-8">
   <title>Quản lý khách hàng</title>
   <link rel="stylesheet" href="../css/styleKhachhang.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
@@ -11,10 +12,9 @@
     <div class="logo">
       <img src="../Image/logostore-Photoroom.png" alt="Logo" />
     </div>
-
     <div class="header-right">
-      <a href="../Admin/Admin.html">Trang chủ</a>
-      <a href="Khachhang.html" class="active"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
+      <a href="../Admin/Admin.html"> 
+        <i class="fa-solid fa-house"></i>Trang chủ</a>
     </div>
   </div>
 
@@ -28,10 +28,67 @@
           <th>Tên khách hàng</th>
           <th>Email</th>
           <th>Số điện thoại</th>
-          <th>Trạng thái</th>
           <th>Thao tác</th>
         </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>DangHau</td>
+          <td>Hoàng Đăng Hậu</td>
+          <td>DangHau@gmail.com</td>
+          <td>0987654321</td>
+          <td>
+            <button class="action-btn reset" title="Reset mật khẩu">
+              <i class="fa-solid fa-rotate-left"></i>
+            </button>
+            <button class="action-btn unlocked" title="Khóa/Mở tài khoản">
+              <i class="fa-solid fa-unlock"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>VoDoanh</td>
+          <td>Trần Văn Võ Doanh</td>
+          <td>VoDoanh@gmail.com</td>
+          <td>0123456789</td>
+          <td>
+            <button class="action-btn reset" title="Reset mật khẩu">
+              <i class="fa-solid fa-rotate-left"></i>
+            </button>
+            <button class="action-btn unlocked" title="Khóa/Mở tài khoản">
+              <i class="fa-solid fa-unlock"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>BaoQuoc</td>
+          <td>Trần Đình Bảo Quốc</td>
+          <td>BaoQuoc@gmail.com</td>
+          <td>0987654321</td>
+          <td>
+            <button class="action-btn reset" title="Reset mật khẩu">
+              <i class="fa-solid fa-rotate-left"></i>
+            </button>
+            <button class="action-btn unlocked" title="Khóa/Mở tài khoản">
+              <i class="fa-solid fa-unlock"></i>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>MinhHuy</td>
+          <td>Phan Lê Minh Huy</td>
+          <td>MinhHuy@gmail.com</td>
+          <td>0123456789</td>
+          <td>
+            <button class="action-btn reset" title="Reset mật khẩu">
+              <i class="fa-solid fa-rotate-left"></i>
+            </button>
+            <button class="action-btn unlocked" title="Khóa/Mở tài khoản">
+              <i class="fa-solid fa-unlock"></i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </div>
 
