--- a/Web Store Project/Register.html
+++ b/Web Store Project/Register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
+    <meta charset="UTF-8">
     <title>Đăng Ký</title>
     <link rel="stylesheet" href="css/styleLi.css">
 </head>
 <body>
-    <!--Nhập thông tin đang kí-->
     <div class="box">
         <input type="text" id="username" placeholder="Username..." style="font-size:15px" required>
         <input type="text" id="name" placeholder="Họ và Tên..." style="font-size:15px" required>
@@ -15,6 +15,8 @@
         <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
         <button onclick="register()" class="login">Đăng ký</button>
     </div>
-    <script src="js/jsRegister.js"></script>
+
+    <script src="js/jsRegister.js">
+    </script>
 </body>
 </html>
