--- a/Web Store Project/User/DoiTT.html
+++ b/Web Store Project/User/DoiTT.html
@@ -29,7 +29,15 @@
             <button onclick="changeInfo()">Đổi thông tin</button>
         </div>
     </div>
-
-    <script src="../js/jsTT.js"></script>
+    <script>
+        function changeInfo() {
+            const message = document.getElementById("message");
+            message.style.display = "block";   // hiện thông báo
+            // Sau 3s quay về thongtin.html
+            setTimeout(() => {
+                window.location.href = "Thongtin.html";
+            }, 3000);
+        }
+    </script>
 </body>
 </html>
