--- a/Web Store Project/Login.html
+++ b/Web Store Project/Login.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
+    <meta charset="UTF-8">
     <title>Đăng Nhập Người Dùng</title>
     <link rel="stylesheet" href="css/styleLi.css">
 </head>
@@ -8,13 +10,19 @@
     <div class="box">
         <input type="text" id="email" placeholder="Email..." style="font-size:15px" required>
         <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
+
         <button onclick="login()" class="login">Đăng nhập</button>
         <button onclick="window.location.href='Register.html'" class="login">Đăng ký</button>
+
         <p id="error" style="color:red; font-size:16px; display:none;">Sai email hoặc mật khẩu!</p>
+
         <!--Đăng nhập quản trị viên riêng-->
-        <p><a href= "Admin/LoginA.html" class="QTV"> Đăng Nhập Với Quản Trị Viên </p>
+        <p><a href="Admin/LoginA.html" class="QTV">Đăng Nhập Với Quản Trị Viên</a></p>
     </div>
+
     <img src="Image/logostore-Photoroom.png" class="Logo">
-    <script src="js/script.js"></script>
+
+    <script src="js/script.js">
+    </script>
 </body>
 </html>
