--- a/Web Store Project/User/ThongTin.html
+++ b/Web Store Project/User/ThongTin.html
@@ -12,7 +12,7 @@
             <img src="../Image/logostore-Photoroom.png" alt="Logo">
         </div>
         <div class="header-right">
-            <a href="User.html">Trang User</a>
+            <a href="User.html">Trở lại</a>
             <a href="DoiTT.html">Đổi thông tin</a>
             <button onclick="window.location.href='../Main.html'">Đăng xuất</button>
         </div>
