--- a/Web Store Project/Admin/Admin.html
+++ b/Web Store Project/Admin/Admin.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="vi">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
-    <link rel="stylesheet" href="../css/styleAdmin.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-</head>
-<body>
-     <!-- Header -->
-  <div class="header">
-    <div class="logo">
-      <img src="../Image/logostore-Photoroom.png" alt="Logo" />
-    </div>
-<!--Các chức năng-->
-    <div class="header-right">
-      <a href="Khachhang.html"><i class="fa-solid fa-users"></i> Quản lý khách hàng</a>
-      <a href="SanPham.html"><i class="fa-solid fa-list-check"></i> Quản lý loại sản phẩm</a>
-    </div>
-  </div>
+    <link rel="stylesheet" href="../css/styleAdmin.css" />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img src="../Image/logostore-Photoroom.png" alt="Logo" />
+      </div>
 
-  <!-- Nội dung -->
-  <div class="content">
-    <h1>Trang Admin</h1>
-    <p>các chức năng quản lý</p>
-  </div>
-<script src="../js/jsAdmin.js"></script>
-</body>   
+      <div class="header-right">
+        <a class="chucnang-item" href="giaban.html">Quản lý giá bán</a>
+        <a class="chucnang-item" href="sanpham.html">Quản lý sản phẩm</a>
+        <a class="chucnang-item" href="phieunhap.html">Quản lý phiếu nhập</a>
+        <a class="chucnang-item" href="donhang.html">Quản lý đơn hàng</a>
+        <a class="chucnang-item" href="khovan.html">Quản lý kho vận</a>
+        <a class="chucnang-item" href="khachhang.html">Quản lý khách hàng</a>
+      </div>
+    </header>
+  </body>
 </html>
