--- a/Web Store Project/Chitiet.html
+++ b/Web Store Project/Chitiet.html
@@ -7,20 +7,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
-
-  <!-- Phần chi tiết sản phẩm -->
+  <a href="User/User.html" class="back-button">
+  <i class="fa-solid fa-arrow-left"></i> Trở lại</a>
   <div class="product-detail">
     <div class="image-section">
       <img id="mainImage" src="Image/sp.jpg" alt="Sản phẩm" class="main-img">
       <div class="thumbnail-container">
-        <img src="Image/sp.jpg" class="thumbnail" onclick="changeImage('Image/sp.jpg')">
-        <img src="Image/sp.jpg" class="thumbnail" onclick="changeImage('Image/sp.jpg')">
-        <img src="Image/sp.jpg" class="thumbnail" onclick="changeImage('Image/sp.jpg')">
+        <img src="Image/sp.jpg" class="thumbnail">
+        <img src="Image/sp.jpg" class="thumbnail" >
+        <img src="Image/sp.jpg" class="thumbnail">
       </div>
     </div>
 
     <div class="info-section">
-      <h2 class="product-title">Sản phẩm nổi bật</h2>
+      <h2 class="product-title">Bó Hoa Quà Tặng</h2>
       <p class="price">Giá bán: <span>200.000đ</span></p>
 
       <div class="voucher">
@@ -42,24 +42,44 @@
       </div>
 
       <div class="buttons">
-        <button class="add-cart" onclick="addToCart()">Thêm vào giỏ hàng</button>
-        <button class="buy-now" onclick="buyNow()">Mua ngay</button>
+        <button class="add-cart" >Thêm vào giỏ hàng</button>
+        <button class="buy-now" >Mua ngay</button>
       </div>
+      <div class="short-desc">
+  <p>Sản phẩm được làm thủ công tỉ mỉ, mang phong cách thanh lịch, phù hợp làm quà tặng cho người thân và bạn bè.</p>
+</div>
+<div class="shop-info">
+  <img src="Image/logostore-Photoroom.png" alt="Logo shop">
+  <h3>Florentino - Gifts That Bloom</h3>
+</div>
     </div>
   </div>
 
-  <!-- Thông tin shop -->
-  <div class="shop-info">
-  <img src="Image/logostore-Photoroom.png" alt="Logo shop">
-  <h3>DangHau Store</h3>
-</div>
   <!-- Mô tả sản phẩm -->
   <div class="product-description">
-    <h3>Mô tả sản phẩm</h3>
-      <p>Quà tặng giành cho các dịp lễ.</p>
-      <p>Sản phẩm được thiết kế tinh tế, chất liệu cao cấp, phù hợp với nhiều nhu cầu sử dụng khác nhau.</p> 
-      <p>Hình ảnh mang tính minh họa, sản phẩm thật có thể khác đôi chút về màu sắc tùy theo ánh sáng.</p>
-  </div>
+  <h3>Mô Tả Sản Phẩm</h3>
+  <h2>Quà tặng dành cho các dịp lễ.</h2>
+  <h2>Sản phẩm được thiết kế tinh tế, chất liệu cao cấp, phù hợp với nhiều nhu cầu sử dụng khác nhau.</h2>
+  <h2>Hình ảnh mang tính minh họa, sản phẩm thật có thể khác đôi chút về màu sắc tùy theo ánh sáng.</h2>
+
+  <details class="desc-box">
+    <summary>
+      Xem thêm <i class="fa-solid fa-chevron-down"></i>
+    </summary>
+    <div class="desc-preview">
+      <p>Được sản xuất thủ công với quy trình nghiêm ngặt, đảm bảo chất lượng và tính thẩm mỹ cao.</p>
+      <p>Phù hợp trang trí phòng khách, bàn làm việc hoặc tặng người thân dịp đặc biệt.</p>
+      <p>Bó hoa tươi được tuyển chọn từ những bông hoa chất lượng cao, mang đến vẻ đẹp thanh lịch và tinh tế.</p>
+      <p>Phù hợp cho nhiều dịp: sinh nhật, kỷ niệm, tốt nghiệp hoặc tặng người thương.</p>
+      <p>Hoa được gói thủ công với phong cách hiện đại, đảm bảo độ tươi lâu và thẩm mỹ cao.</p>
+      <p>Hình ảnh mang tính minh họa, màu sắc và loại hoa có thể thay đổi tùy theo mùa vụ.</p>
+      <p>Hộp quà được thiết kế sang trọng, kết hợp giữa hoa, phụ kiện và quà tặng tinh tế.</p>
+      <p>Phù hợp tặng người thân, đối tác, đồng nghiệp hoặc cho những dịp đặc biệt.</p>
+      <p>Mỗi sản phẩm đều được Florentino gói ghém thủ công với sự chăm chút trong từng chi tiết.</p>
+      <p>Hình ảnh mang tính minh họa, sản phẩm thật có thể khác nhẹ về bố cục và màu sắc.</p>
+    </div>
+  </details>
+</div>
 
   <!-- Liên hệ -->
   <div class="contact">
@@ -74,24 +94,5 @@
       <i class="fa-solid fa-envelope"></i>
     </div>
   </div>
-
-  <script>
-    function changeImage(imgSrc) {
-      document.getElementById("mainImage").src = imgSrc;
-    }
-
-    function addToCart() {
-      const style = document.getElementById("style").value;
-      const qty = document.getElementById("quantity").value;
-      alert(`Đã thêm ${qty} sản phẩm ${style} vào giỏ hàng!`);
-    }
-
-    function buyNow() {
-      const style = document.getElementById("style").value;
-      const qty = document.getElementById("quantity").value;
-      alert(`Bạn đã chọn mua ${qty} sản phẩm ${style}. Cảm ơn bạn đã mua hàng!`);
-    }
-  </script>
-
 </body>
 </html>
