--- a/Web Store Project/Register.html
+++ b/Web Store Project/Register.html
@@ -15,7 +15,7 @@
         <input type="password" id="password" placeholder="Password..." style="font-size:15px" required>
         <button onclick="register()" class="login">Đăng ký</button>
     </div>
-
+<img src="Image/logostore-Photoroom.png" class="Logo">
     <script src="js/jsRegister.js">
     </script>
 </body>
