--- a/Web Store Project/User/User.html
+++ b/Web Store Project/User/User.html
@@ -22,7 +22,7 @@
           <a class="fa fa-user" href="ThongTin.html"></a>
         </ul>
         <ul>
-          <a class="fa fa-shopping-bag" href="#"></a>
+          <a class="fa fa-shopping-bag" href="giohang.html"></a>
         </ul>
       </div>
     </div>
