update danh muc

--- a/Web Store Project/Chitiet.html
+++ b/Web Store Project/Chitiet.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a href="User/User.html" class="back-button">
-  <i class="fa-solid fa-arrow-left"></i> Trở lại</a>
+  <i class="fa-solid fa-arrow-left"></i> Trở Lại Trang Chủ</a>
   <div class="product-detail">
     <div class="image-section">
       <img id="mainImage" src="Image/sp.jpg" alt="Sản phẩm" class="main-img">
