--- a/Web Store Project/Main.html
+++ b/Web Store Project/Main.html
@@ -57,42 +57,42 @@
       <h2 class="danhsach-title">DANH MỤC</h2>
       <div class="danhsach-grid">
         <div class="danh-muc">
-          <img src="Image/1.webp" alt="thiep"/>
+          <a href="HienThicp.html"><img src="Image/1.webp" alt="thiep"/></a>
           <p>Thiệp và Phụ kiện</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/2.jpg" alt="trangtri"/>
+          <a href="HienThicp.html"><img src="Image/2.jpg" alt="trangtri"/></a>
           <p>Đồ trang trí</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/3.webp" alt="setqua"/>
+          <a href="HienThicp.html"><img src="Image/3.webp" alt="setqua"/></a>
           <p>Set quà tặng</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/4.jpg" alt="handmade"/>
+          <a href="HienThicp.html"><img src="Image/4.jpg" alt="handmade"/></a>
           <p>Handmade</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/5.jpg" alt="luuniem"/>
+          <a href="HienThicp.html"><img src="Image/5.jpg" alt="luuniem"/></a>
           <p>Quà lưu niệm</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/6.jpg" alt="Quatang"/>
+          <a href="HienThicp.html"><img src="Image/6.jpg" alt="Quatang"/></a>
           <p>Quà tặng & Giỏ quà</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/7.webp" alt="hoagiay"/>
+          <a href="HienThicp.html"><img src="Image/7.webp" alt="hoagiay"/></a>
           <p>Hoa giấy</p>
         </div>
 
         <div class="danh-muc">
-          <img src="Image/8.jpg" alt="hoathat"/>
+          <a href="HienThicp.html"><img src="Image/8.jpg" alt="hoathat"/></a>
           <p>Hoa thật 100%</p>
         </div>
       </div>
