--- a/Web Store Project/Chitiet.html
+++ b/Web Store Project/Chitiet.html
@@ -42,8 +42,10 @@
       </div>
 
       <div class="buttons">
-        <button class="add-cart" >Thêm vào giỏ hàng</button>
-        <button class="buy-now" >Mua ngay</button>
+        <a href="User/giohang.html">
+        <button class="add-cart" >Thêm vào giỏ hàng</button></a>
+        <a href="User/thanhtoan.html">
+        <button class="buy-now" >Mua ngay</button></a>
       </div>
       <div class="short-desc">
   <p>Sản phẩm được làm thủ công tỉ mỉ, mang phong cách thanh lịch, phù hợp làm quà tặng cho người thân và bạn bè.</p>
