--- a/Web Store Project/HienThicp.html
+++ b/Web Store Project/HienThicp.html
@@ -15,12 +15,17 @@
       <img src="Image/logostore-Photoroom.png" alt="Logo" />
     </div>
     <div class="others">
-      <ul>
-        <input style="height: 30px; font-size: 15px" placeholder="Tìm Kiếm..." type="text" />
-        <a href="#"><i class="fa fa-search"></i></a>
-      </ul>
-      <ul><a class="fa fa-user" href="User/ThongTin.html"></a></ul>
-      <ul><a class="fa fa-shopping-bag" href="User/giohang.html"></a></ul>
+      <form action="User/Searchcp.html" method="get" class="search-form">
+      <div class="search-box">
+        <input type="search" name="query" placeholder="Tìm kiếm sản phẩm..." required/>
+        <button type="submit" title="Tìm kiếm">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </form>
+      <ul><a class="fa fa-user" href="Login.html"></a></ul>
+      <ul><a class="fa fa-shopping-bag" href="Login.html"></a></ul>
+      <ul><a href="Main.html" class="fa fa-home"> </a> </ul>
     </div>
   </div>
   <!-- ========== DANH MỤC SẢN PHẨM ========== -->
