--- a/Web Store Project/Main.html
+++ b/Web Store Project/Main.html
@@ -14,10 +14,14 @@
         <img src="Image/logostore-Photoroom.png" alt="Logo" />
       </div>
       <div class="others">
-        <ul>
-          <input style="height: 30px; font-size: 15px" placeholder="Tìm Kiếm..."type="text"/>
-          <a  href="User/Search.html"> <i class="fa fa-search"></i></a>
-        </ul>
+          <form action="User/Searchcp.html" method="get" class="search-form">
+      <div class="search-box">
+        <input type="search" name="query" placeholder="Tìm kiếm sản phẩm..." required/>
+        <button type="submit" title="Tìm kiếm">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </form>
         <ul>
           <a class="fa fa-user" href="Login.html"></a>
         </ul>
