--- a/Web Store Project/User/User.html
+++ b/Web Store Project/User/User.html
@@ -14,11 +14,15 @@
         <img src="../Image/logostore-Photoroom.png" alt="Logo" />
       </div>
       <div class="others">
-        <ul>
-          <input style="height: 30px; font-size: 15px" placeholder="Tìm Kiếm..."type="text"/>
-          <a  href="Search.html"> <i class="fa fa-search"></i></a>
-        </ul>
-        <ul>
+        <form action="Search.html" method="get" class="search-form">
+      <div class="search-box">
+        <input type="search" name="query" placeholder="Tìm kiếm sản phẩm..." required/>
+        <button type="submit" title="Tìm kiếm">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </form>
+    <ul>
           <a class="fa fa-user" href="ThongTin.html"></a>
         </ul>
         <ul>
@@ -52,42 +56,42 @@
       <h2 class="danhsach-title">DANH MỤC</h2>
       <div class="danhsach-grid">
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/1.webp" alt="thiep"/></a>
+          <a href="../HienThi.html"><img src="../Image/1.webp" alt="thiep"/></a>
           <p>Thiệp và Phụ kiện</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/2.jpg" alt="trangtri"/></a>
+          <a href="../HienThi.html"><img src="../Image/2.jpg" alt="trangtri"/></a>
           <p>Đồ trang trí</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/3.webp" alt="setqua"/></a>
+          <a href="../HienThi.html"><img src="../Image/3.webp" alt="setqua"/></a>
           <p>Set quà tặng</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/4.jpg" alt="handmade"/></a>
+          <a href="../HienThi.html"><img src="../Image/4.jpg" alt="handmade"/></a>
           <p>Handmade</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/5.jpg" alt="luuniem"/></a>
+          <a href="../HienThi.html"><img src="../Image/5.jpg" alt="luuniem"/></a>
           <p>Quà lưu niệm</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/6.jpg" alt="Quatang"/></a>
+          <a href="../HienThi.html"><img src="../Image/6.jpg" alt="Quatang"/></a>
           <p>Quà tặng & Giỏ quà</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/7.webp" alt="hoagiay"/></a>
+          <a href="../HienThi.html"><img src="../Image/7.webp" alt="hoagiay"/></a>
           <p>Hoa giấy</p>
         </div>
 
         <div class="danh-muc">
-          <a href="HienThi.html"><img src="../Image/8.jpg" alt="hoathat"/></a>
+          <a href="../HienThi.html"><img src="../Image/8.jpg" alt="hoathat"/></a>
           <p>Hoa thật 100%</p>
         </div>
       </div>
