--- a/Web Store Project/User/donhangdanhan.html
+++ b/Web Store Project/User/donhangdanhan.html
@@ -137,7 +137,7 @@
   </main>
 
     <footer class="footer">
-    <p>🌼 DANGHAUSTORE - Hoa tươi không cần tưới 🌼</p>
+    <p>🌼 FLORENTINO - Hoa tươi không cần tưới 🌼</p>
   </footer>
 </body>
 </html>
