--- a/Web Store Project/User/thanhtoan.html
+++ b/Web Store Project/User/thanhtoan.html
@@ -132,6 +132,6 @@
 </body>
 <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>🌼 DANGHAUSTORE - Hoa tươi không cần tưới 🌼</p>
+    <p>🌼 FLORENTINO - Hoa tươi không cần tưới 🌼</p>
   </footer>
 </html>
