--- a/Web Store Project/Chitietcp.html
+++ b/Web Store Project/Chitietcp.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
-  <a href="User/User.html" class="back-button">
+  <a href="Main.html" class="back-button">
   <i class="fa-solid fa-arrow-left"></i> Trở lại</a>
   <div class="product-detail">
     <div class="image-section">
