--- a/Web Store Project/User/lichsugiaodich.html
+++ b/Web Store Project/User/lichsugiaodich.html
@@ -102,6 +102,6 @@
 </body>
 <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>🌼 DANGHAUSTORE - Hoa tươi không cần tưới 🌼</p>
+    <p>🌼 FLORENTINO - Hoa tươi không cần tưới 🌼</p>
   </footer>
 </html>
